tests/toylang/neg/001655_mutation.toylang
program a = { while a if sleep; } .
